<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/connections_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />


        <ListPreference
            app:entries="@array/update_rate_array_entries"
            app:entryValues="@array/update_rate_array_values"
            app:key="@string/key_update_rate"
            app:title="@string/update_rate_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/conn_dev_def_array_entries"
            app:entryValues="@array/conn_dev_def_array_values"
            app:key="@string/key_connected_devices"
            app:title="@string/connected_devices_title" />
    </PreferenceCategory>



</PreferenceScreen>
